2009-03-02  Chris Waterson  <waterson@maubi.net>

	* HDBC-mysql-0.5. Use "throwSqlError" instead of "throwDyn" so
	that we get legible errors under ghc-6.10.  This also removes the
	dependency on base 3.

2009-02-26  Chris Waterson  <waterson@maubi.net>

	* HDBC-mysql-0.4. Fix incorrect binding size (should always be 4
	bytes, not compiler's "long") for MYSQL_TYPE_LONG columns.

2009-02-18  Chris Waterson  <waterson@maubi.net>

	* HDBC-mysql-0.3 Deal with some of the problems where statements
	would mysteriously "close".  It turns out that only one statement
	can be "active" on a connection at a time, and that closing an
	inactive statement causes the current statement to close as well.

2009-02-14  Chris Waterson  <waterson@maubi.net>

	* HDBC-mysql-0.2 Fix binding width for dates: MySQL's length
	indicates 19 characters (which is the length of the string), but
	we need the full size of the MYSQL_TIME struct.  Leak connections
	and statements until I can figure out how to keep the ForeignPtr's
	alive.
